<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Spp.SppFragment">

    <TextView
        android:id="@+id/sppsat"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/sppsatcount"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sppsatcount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/sppsatcount"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/sppsat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <!-- 新增的TextView -->
    <TextView
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/latitudeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sppsat"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Lat_values"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sppsatcount"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/longitudeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Lon_values"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeValue"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/elevation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/elevationValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/elevationValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Elevation_values"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeValue"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toTopOf="@+id/elevationValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"
        app:layout_constraintVertical_bias="0.949" />
    <!-- ScrollView 的 top 调整为紧跟 elevationValue -->
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/spptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>